// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BadgeType Component Snapshot testing hauria de coincidir amb el snapshot en mode muted 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderRadius": 8,
        "justifyContent": "center",
        "overflow": "hidden",
        "paddingHorizontal": 8,
        "paddingVertical": 2,
      },
      {
        "backgroundColor": "#D1FAE5",
        "borderColor": "#34D399",
        "borderWidth": 1.25,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "Arimo",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        },
        {
          "color": "#6B7280",
        },
        undefined,
      ]
    }
  >
    No vigilat
  </Text>
</View>
`;

exports[`BadgeType Component Snapshot testing hauria de coincidir amb el snapshot en mode neutral 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderRadius": 8,
        "justifyContent": "center",
        "overflow": "hidden",
        "paddingHorizontal": 8,
        "paddingVertical": 2,
      },
      {
        "backgroundColor": "#F3F4F6",
        "borderColor": "#D1D5DB",
        "borderWidth": 1.25,
      },
      {
        "opacity": 0.7,
      },
    ]
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "Arimo",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        },
        {
          "color": "#6B7280",
        },
        undefined,
      ]
    }
  >
    No vigilat
  </Text>
</View>
`;

exports[`BadgeType Component Snapshot testing hauria de coincidir amb el snapshot per cada tipus: BadgeType-0 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderRadius": 8,
        "justifyContent": "center",
        "overflow": "hidden",
        "paddingHorizontal": 8,
        "paddingVertical": 2,
      },
      {
        "backgroundColor": "#D1FAE5",
        "borderColor": "#34D399",
        "borderWidth": 1.25,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "Arimo",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        },
        {
          "color": "#065F46",
        },
        undefined,
      ]
    }
  >
    No vigilat
  </Text>
</View>
`;

exports[`BadgeType Component Snapshot testing hauria de coincidir amb el snapshot per cada tipus: BadgeType-1 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderRadius": 8,
        "justifyContent": "center",
        "overflow": "hidden",
        "paddingHorizontal": 8,
        "paddingVertical": 2,
      },
      {
        "backgroundColor": "#DBEAFE",
        "borderColor": "#60A5FA",
        "borderWidth": 1.25,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "Arimo",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        },
        {
          "color": "#1E40AF",
        },
        undefined,
      ]
    }
  >
    Ocupat a l'estiu
  </Text>
</View>
`;

exports[`BadgeType Component Snapshot testing hauria de coincidir amb el snapshot per cada tipus: BadgeType-2 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderRadius": 8,
        "justifyContent": "center",
        "overflow": "hidden",
        "paddingHorizontal": 8,
        "paddingVertical": 2,
      },
      {
        "backgroundColor": "#FEE2E2",
        "borderColor": "#F87171",
        "borderWidth": 1.25,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "Arimo",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        },
        {
          "color": "#7A0B0B",
        },
        undefined,
      ]
    }
  >
    Tancat
  </Text>
</View>
`;

exports[`BadgeType Component Snapshot testing hauria de coincidir amb el snapshot per cada tipus: BadgeType-3 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderRadius": 8,
        "justifyContent": "center",
        "overflow": "hidden",
        "paddingHorizontal": 8,
        "paddingVertical": 2,
      },
      {
        "backgroundColor": "#F3F4F6",
        "borderColor": "#9CA3AF",
        "borderWidth": 1.25,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "Arimo",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        },
        {
          "color": "#374151",
        },
        undefined,
      ]
    }
  >
    Abric
  </Text>
</View>
`;

exports[`BadgeType Component Snapshot testing hauria de coincidir amb el snapshot per cada tipus: BadgeType-4 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderRadius": 8,
        "justifyContent": "center",
        "overflow": "hidden",
        "paddingHorizontal": 8,
        "paddingVertical": 2,
      },
      {
        "backgroundColor": "#FEF3C7",
        "borderColor": "#F59E42",
        "borderWidth": 1.25,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "Arimo",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        },
        {
          "color": "#92400E",
        },
        undefined,
      ]
    }
  >
    Emergència
  </Text>
</View>
`;

exports[`BadgeType Component Snapshot testing hauria de coincidir amb el snapshot per cada tipus: BadgeType-5 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderRadius": 8,
        "justifyContent": "center",
        "overflow": "hidden",
        "paddingHorizontal": 8,
        "paddingVertical": 2,
      },
      {
        "backgroundColor": "#E5E7EB",
        "borderColor": "#9CA3AF",
        "borderWidth": 1.25,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "Arimo",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        },
        {
          "color": "#6B7280",
        },
        undefined,
      ]
    }
  >
    Desconegut
  </Text>
</View>
`;
